--- a/public/archive.html
+++ b/public/archive.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,65 +15,35 @@
             font-size: 2rem;
             color: #ecba13;
             text-shadow: 0 0 10px #fff;
-            margin-top: 50px;
         }
-
-        /* Center everything */
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .plugin-section {
-            margin-bottom: 20px;
-            right: -120px;
-            position: relative;
-        }
-
         .move-list-container {
             height: 500px;
             /* Adjust height as needed */
             overflow-y: auto;
             padding: 10px;
-            position: relative;
-            right: -130px;
-            top: 50px;
         }
-
-        .move-list {
+        .ove-list {
             margin: 0;
             padding: 0;
             list-style: none;
         }
-
         .move-list li {
             cursor: pointer;
             padding: 5px;
         }
-
         .move-list li:hover {
             background-color: #f0f0f0;
         }
-
         .move-navigation {
-            top: 600px;
-            right: 250px;
-            position: relative;
             padding: 5px;
         }
-
-        .navigation-links {
-            position: relative;
-            right: -250px;
-            top: -100px;
-        }
-        .home-button-leaderboard {
-            position: relative;
-            right:430px;
-            top:100px;
+        .home-button-leaderboard{
+            padding: 15px 30px;
+            color: #FFDD00;
+            background-color: #FFDD00;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
         }
         #mobile-overlay {
             display: none; /* Hide by default */
@@ -92,7 +61,6 @@
         }
     </style>
 </head>
-
 <body>
     <div id="mobile-overlay">This page is not available on mobile devices. Please access it from a desktop or laptop.</div>
     <div class="container">
@@ -289,12 +257,6 @@
                     });
                 });
             });
-            // Fetch selected background image from localStorage
-            const selectedBackground = localStorage.getItem('backgroundImage');
-            // Set the selected background as the body background
-            if (selectedBackground) {
-                document.body.style.backgroundImage = `url(${selectedBackground})`;
-            }
         </script>
 </body>
 </html>
