--- a/public/tournament.html
+++ b/public/tournament.html
@@ -7,36 +7,36 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-</head>
-<body>
   <style>
-    body, html{
+    body, html {
       background-color: #4F2984;
-      margin-top:50px
+      margin-top: 50px;
     }
-    .container{
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Darker box shadow */
-      margin-top:-125px
+    .container {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      margin-top: -125px;
     }
-    .leaderboard-h1{
+    .leaderboard-h1 {
       text-align: center;
       color: white;
-      font-size:48px;
+      font-size: 48px;
     }
-    .submit-container{
-      position:relative;
-      top:0px;
-      right:0px;
+    .submit-container {
+      position: relative;
+      top: 0px;
+      right: 0px;
     }
-    .home-button-leaderboard{
+    .home-button-leaderboard {
       padding: 15px 30px;
-            color: #FFDD00;
-            background-color: #FFDD00;
-            border: none;
-            border-radius: 5px;
-            text-align: center;
+      color: #FFDD00;
+      background-color: #FFDD00;
+      border: none;
+      border-radius: 5px;
+      text-align: center;
     }
   </style>
+</head>
+<body>
   <!-- Three.js Background Canvas -->
   <div class="background-container">
     <canvas id="backgroundCanvas"></canvas>
@@ -48,9 +48,9 @@
     </ul>
     <div class="user-container">
       <div class="user" id="user1"></div>
-        <span id="user1GamesPlayed">0</span> games played
-        <br>
-        <span id="user1TotalScore">0</span> total score
+      <span id="user1GamesPlayed">0</span> games played
+      <br>
+      <span id="user1TotalScore">0</span> total score
       <div class="buttons1">
         <button id="winButton1">Win</button>
         <button id="drawButton1">Draw</button>
@@ -59,9 +59,9 @@
     </div>
     <div class="user-container">
       <div class="user" id="user2"></div>
-        <span id="user2GamesPlayed">0</span> games played
-        <br>
-        <span id="user2TotalScore">0</span> total score
+      <span id="user2GamesPlayed">0</span> games played
+      <br>
+      <span id="user2TotalScore">0</span> total score
       <div class="buttons2">
         <button id="winButton2">Win</button>
         <button id="drawButton2">Draw</button>
@@ -72,18 +72,78 @@
       <button id="submitResult" style="display: none;">Submit Result</button>
     </div>
   </div>
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
   <script>
     // Fetch username data from the server
-    fetch('/api/username')
+    fetch('/.netlify/functions/username')
       .then(response => response.json())
       .then(data => {
         const usernameDisplay = document.getElementById('username-display');
-        usernameDisplay.textContent = `Welcome, ${data.username}`;
+        if (data.username) {
+          usernameDisplay.textContent = `Welcome, ${data.username}`;
+        } else {
+          console.error('Unexpected data format:', data);
+        }
       })
       .catch(error => console.error('Error fetching username data:', error));
+
+    // Fetch random users data from the server
+    function fetchRandomUsers() {
+      $.ajax({
+        url: '/.netlify/functions/random-users',
+        method: 'GET',
+        success: function(data) {
+          if (data.user1 && data.user2) {
+            $('#user1').text(data.user1.username + ' - Rating: ' + data.user1.rating);
+            $('#user1').data('userid', data.user1._id);
+            $('#user2').text(data.user2.username + ' - Rating: ' + data.user2.rating);
+            $('#user2').data('userid', data.user2._id);
+          } else {
+            console.error('Unexpected data format:', data);
+          }
+        },
+        error: function(err) {
+          console.error('Error fetching random users:', err);
+        }
+      });
+    }
+
+    $(document).ready(function() {
+      // Fetch random users when the page loads
+      fetchRandomUsers();
+
+      // Variables to track button selections
+      var user1Selection = '';
+      var user2Selection = '';
+
+      // Event listener for the win, draw, and lose buttons of user 1
+      $('.buttons1 button').click(function() {
+        user1Selection = $(this).text();
+        checkSubmitVisibility();
+      });
+
+      // Event listener for the win, draw, and lose buttons of user 2
+      $('.buttons2 button').click(function() {
+        user2Selection = $(this).text();
+        checkSubmitVisibility();
+      });
+
+      // Function to check if the submit button should be visible
+      function checkSubmitVisibility() {
+        if (user1Selection !== '' && user2Selection !== '') {
+          $('#submitResult').show();
+        }
+      }
+
+      // Event listener for the submit button
+      $('#submitResult').click(function() {
+        // Call a function to handle the submission
+        submitResult(user1Selection, user2Selection);
+      });
+    });
   </script>
 </body>
 </html>
