--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,11 @@
           <form id="loginForm">
             <div class="form-group">
               <label for="loginEmail">Email address</label>
-              <input type="email" class="form-control" id="loginEmail" name="email" required>
+              <input type="email" class="form-control" id="loginEmail" name="email" required autocomplete="email">
             </div>
             <div class="form-group">
               <label for="loginPassword">Password</label>
-              <input type="password" class="form-control" id="loginPassword" name="password" required>
+              <input type="password" class="form-control" id="loginPassword" name="password" required autocomplete="current-password">
             </div>
             <button type="submit" class="btn btn-primary loginbtn">Login</button>
             <div id="loginMessage" class="message"></div>
@@ -76,15 +76,15 @@
           <form id="registerForm">
             <div class="form-group">
               <label for="registerUsername">Username</label>
-              <input type="text" class="form-control" id="registerUsername" name="username" required>
+              <input type="text" class="form-control" id="registerUsername" name="username" required autocomplete="username">
             </div>
             <div class="form-group">
               <label for="registerEmail">Email address</label>
-              <input type="email" class="form-control" id="registerEmail" name="email" required>
+              <input type="email" class="form-control" id="registerEmail" name="email" required autocomplete="email">
             </div>
             <div class="form-group">
               <label for="registerPassword">Password</label>
-              <input type="password" class="form-control" id="registerPassword" name="password" required>
+              <input type="password" class="form-control" id="registerPassword" name="password" required autocomplete="new-password">
             </div>
             <div class="form-group">
               <label for="registerSchool">School</label>
