--- a/public/main.html
+++ b/public/main.html
@@ -28,6 +28,7 @@
                 position: relative;
                 z-index: 1; /* Ensure this is above the background */
                 background-color: #4f2984;
+                padding: 20px;
             }
             .container {
                 position: relative;
@@ -40,6 +41,25 @@
             }
             .grid-item {
                 text-align: center;
+            }
+            @media (max-width: 768px) {
+                .grid-container {
+                    grid-template-columns: 1fr;
+                    position:relative;
+                    right:35px;
+                    
+                }
+                .container {
+                    position: relative;
+                    z-index: 1; /* Ensure this is above the background */
+                    background-color: #4f2984;
+                    padding: 20px;
+                    margin-top: 30px;
+                }
+                .hub{
+                    position:relative;
+                    right:-75px;
+                }
             }
         </style>
     </head>
